# Will_Docs

./: README.md  main.py  pyproject.toml  req.txt  wii_dcos_readme.md
docker/: docker-compose.yml
qdrant_storage/: raft_state.json
qdrant_storage/collections/wiidcos_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/wiidcos_docs/0/segments/1bc12184-35d4-425b-9a0e-422ac1f05d41/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/wiidcos_docs/0/segments/7919d8ae-b431-4190-b7ca-2dd61f618be3/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/wiidcos_docs/0/segments/a3ccbdc4-3f2a-4462-803d-021de7f93694/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/wiidcos_docs/0/segments/ab392891-a398-4718-88a6-f8d30d042092/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/wiidcos_docs/0/segments/ef3a8b09-27e6-4089-adcc-18cecf013e7e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/wiidcos_docs/0/segments/fc1d5d34-1e1d-4f87-bf93-fed6b9e499a9/: mutable_id_tracker.mappings  (+1 more)
src/agents/: ingest.py
src/api/: main.py
src/api/routes/: query.py  upload.py
src/core/: config.py  qdrant_store.py  retriever.py
src/server/: main.py
src/ui/: app.py
src/workers/: ingestion.py
storage/index/: default__vector_store.json  docstore.json  index_store.json
storage/qdrant/: default__vector_store.json  docstore.json  index_store.json
(+18 files in other folders)
